# PluginHostSG

./: .gitignore  CMakeLists.txt  README.md
cmake/: juce.cmake
doc/: ClassDiagram.wsd
src/: CMakeLists.txt  JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SgLookAndFeel.cpp  SgLookAndFeel.h
